# Artisanica

./: .gitignore  README.md  package.json
artisanica/: package.json
artisanica/src/lib/: index.ts
artisanica/src/routes/: +page.svelte
artisanica/src/routes/login/: +page.server.ts  +page.svelte
artisanica/src/routes/portal/: +page.svelte
artisanica/src/routes/register/: +page.server.ts  +page.svelte
backend-service/: package-lock.json  package.json  tsconfig.json
backend-service/prisma/: schema.prisma
backend-service/prisma/migrations/20250511090051_init/: migration.sql
backend-service/src/: app.ts  server.ts
backend-service/src/api/v1/: app.ts
backend-service/src/api/v1/routes/: index.ts
backend-service/src/api/v1/routes/auth/: index.ts
backend-service/src/application/: index.ts
backend-service/src/application/auth/: auth.service.ts
backend-service/src/models/user/: index.ts
backend-service/src/plugins/: prisma.ts
backend-service/src/routes/: health.ts  index.ts
backend-service/src/storage/repositories/auth/: index.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
