[package]
name = "artisanica"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "artisanica_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Required to run async Rust code (like database queries)
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# The actual library that talks to PostgreSQL
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }

# Lets you load environment variables from a .env file
dotenv = "0.15"

